syntax="proto3";

package tukki.rpc.kv.v1;

option go_package = "github.com/jukeks/tukki/rpc/kv";


service KvService {
    rpc Query(QueryRequest) returns (QueryResponse) {}
    rpc QueryRange(QueryRangeRequest) returns (QueryRangeResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
    rpc DeleteRange(DeleteRangeRequest) returns (DeleteRangeResponse) {}
}

message QueryRequest {
    string key = 1;
}

message QueryRangeRequest {
    string min = 1;
    string max = 2;
}

message SetRequest {
    KvPair pair = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteRangeRequest {
    string min = 1;
    string max = 2;
}

message KvPair {
    string key = 1;
    string value = 2;
}

message Error {
    string message = 1;
}

message QueryResponse {
    oneof value {
        Error error = 1;
        KvPair pair = 2;
    }
}

message QueryRangeResponse {
    repeated KvPair pairs = 1;
}


message SetResponse {
    Error error = 1;
}

message DeleteResponse {
    Error error = 1;
}

message DeleteRangeResponse {
    Error error = 1;
    uint64 deleted = 2;
}